--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fix:quiz-options": "node scripts/fix-quiz-options.js",
     "test:quiz-options": "node scripts/test-quiz-options.js",
     "migrate:db": "ts-node scripts/migrate-db.ts",
+    "delete:users-no-purchases": "ts-node scripts/delete-users-without-purchases.ts",
     "postinstall": "prisma generate"
   },
   "dependencies": {
