--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "test:quiz-options": "node scripts/test-quiz-options.js",
     "migrate:db": "ts-node scripts/migrate-db.ts",
     "delete:users-no-purchases": "ts-node scripts/delete-users-without-purchases.ts",
+    "download-uploadthing": "npx tsx ./scripts/download-uploadthing-files.ts",
+    "upload-to-r2": "npx tsx ./scripts/upload-to-r2.ts",
+    "migrate-db-to-r2": "npx tsx ./scripts/migrate-db-urls-to-r2.ts",
+    "setup-r2-cors": "npx tsx ./scripts/setup-r2-cors.ts",
+    "backup-db-urls": "npx tsx ./scripts/backup-db-urls.ts",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
+    "@aws-sdk/client-s3": "^3.988.0",
+    "@aws-sdk/lib-storage": "^3.988.0",
     "@clerk/nextjs": "^6.36.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^4.1.3",
